NEXT-1081 - Add language change to administration

--- a/Resources/administration/src/app/component/base/sw-icon/sw-icon.html.twig
+++ b/Resources/administration/src/app/component/base/sw-icon/sw-icon.html.twig
@@ -1,6 +1,7 @@
 {% block sw_icon %}
     <svg class="sw-icon"
          :class="iconClasses"
+         v-on="$listeners"
          :style="iconStyles"
          :aria-hidden="decorative">
         {% block sw_icon_inner %}
