--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -129,7 +129,7 @@
                                     <sw-confirm-field
                                         compact
                                         ref="inlineEditFieldAlt"
-                                        :placeholder="$tc('sw-media.sidebar.metadata.altText')"
+                                        :placeholder="placeholder(item, 'alt', $tc('sw-media.sidebar.metadata.altText'))"
                                         :value="item.alt"
                                         @input="onSubmitAltText">
                                     </sw-confirm-field>
@@ -143,7 +143,7 @@
                                     <sw-confirm-field
                                         compact
                                         :value="item.title"
-                                        :placeholder="$tc('sw-media.sidebar.metadata.title')"
+                                        :placeholder="placeholder(item, 'title', $tc('sw-media.sidebar.metadata.title'))"
                                         ref="inlineEditFieldTitle"
                                         @input="onSubmitTitle">
                                     </sw-confirm-field>
