--- a/Resources/administration/src/module/sw-product/component/sw-product-category-form/sw-product-category-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-category-form/sw-product-category-form.html.twig
@@ -9,7 +9,11 @@
                           validation="required"
                           @change="onChangeCatalog"
                           v-model="product.catalogId">
-                    <option slot="options" v-for="catalog in catalogs" :value="catalog.id">{{ catalog.name }}</option>
+                    <option slot="options"
+                            v-for="catalog in catalogs"
+                            :value="catalog.id">
+                        {{ catalog.meta.viewData.name }}
+                    </option>
                 </sw-field>
             {% endblock %}
 
