--- a/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-list/sw-settings-country-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-list/sw-settings-country-list.html.twig
@@ -39,6 +39,10 @@
                 </template>
             {% endblock %}
 
+            {% block sw_settings_country_list_language_switch %}
+                <sw-language-switch slot="language-switch" @on-change="onChangeLanguage"></sw-language-switch>
+            {% endblock %}
+
             {% block sw_settings_country_list_content %}
                 <sw-card-view slot="content">
                     {% block sw_settings_country_list_content_card %}
@@ -62,7 +66,7 @@
                                                         <router-link :title="$tc('sw-settings-country.list.contextMenuEdit')" class="sw-country-list__column-name"
                                                                      :to="{ name: 'sw.settings.country.detail', params: { id: item.id } }">
                                                             {% block sw_settings_country_list_columns_name_link %}
-                                                                {{ item.name }}
+                                                                {{ item.meta.viewData.name }}
                                                             {% endblock %}
                                                         </router-link>
                                                     {% endblock %}
@@ -120,7 +124,7 @@
                                                           variant="small">
                                                     {% block sw_settings_country_list_delete_modal_confirm_text %}
                                                         <p>
-                                                            {{ $tc('sw-settings-country.list.textDeleteConfirm', 0, { name: item.name }) }}
+                                                            {{ $tc('sw-settings-country.list.textDeleteConfirm', 0, { name: item.meta.viewData.name }) }}
                                                         </p>
                                                     {% endblock %}
 
