--- a/Resources/administration/src/module/sw-sales-channel/page/sw-sales-channel-create/sw-sales-channel-create.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/page/sw-sales-channel-create/sw-sales-channel-create.html.twig
@@ -1,1 +1,14 @@
 {% block sw_sales_channel_detail_content_tabs %}{% endblock %}
+
+{% block sw_sales_channel_detail_language_switch %}
+    <sw-language-switch slot="language-switch"
+                        disabled>
+    </sw-language-switch>
+{% endblock %}
+
+{% block sw_sales_channel_detail_content_language_info %}
+    <sw-language-info
+            :entityDescription="placeholder(salesChannel, 'name', $tc('sw-sales-channel.detail.textHeadline'))"
+            isNewEntity>
+    </sw-language-info>
+{% endblock %}
