--- a/Resources/administration/src/module/sw-settings-currency/page/sw-settings-currency-detail/sw-settings-currency-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-currency/page/sw-settings-currency-detail/sw-settings-currency-detail.html.twig
@@ -24,8 +24,22 @@
             </template>
         {% endblock %}
 
+        {% block sw_settings_currency_detail_language_switch %}
+            <sw-language-switch slot="language-switch"
+                                @on-change="onChangeLanguage"
+                                :saveChangesFunction="saveOnLanguageChange"
+                                :abortChangeFunction="abortOnLanguageChange">
+            </sw-language-switch>
+        {% endblock %}
+
         {% block sw_settings_currency_detail_content %}
             <sw-card-view slot="content">
+
+                {% block sw_settings_currency_detail_content_language_info %}
+                    <sw-language-info
+                            :entityDescription="placeholder(currency, 'name', $tc('sw-settings-currency.detail.textHeadline'))">
+                    </sw-language-info>
+                {% endblock %}
 
                 {% block sw_settings_currency_detail_content_card %}
                     <sw-card :title="$tc('sw-settings-currency.detail.titleCard')">
@@ -34,7 +48,7 @@
                             {% block sw_settings_currency_detail_content_field_name %}
                                 <sw-field type="text"
                                           :label="$tc('sw-settings-currency.detail.labelName')"
-                                          :placeholder="$tc('sw-settings-currency.detail.placeholderName')"
+                                          :placeholder="placeholder(currency, 'name', $tc('sw-settings-currency.detail.placeholderName'))"
                                           v-model="currency.name">
                                 </sw-field>
                             {% endblock %}
@@ -42,7 +56,7 @@
                             {% block sw_settings_currency_detail_content_field_short_name %}
                                 <sw-field type="text"
                                           :label="$tc('sw-settings-currency.detail.labelShortName')"
-                                          :placeholder="$tc('sw-settings-currency.detail.placeholderShortName')"
+                                          :placeholder="placeholder(currency, 'shortName', $tc('sw-settings-currency.detail.placeholderShortName'))"
                                           v-model="currency.shortName">
                                 </sw-field>
                             {% endblock %}
