--- a/Resources/administration/src/module/sw-settings-currency/page/sw-settings-currency-list/sw-settings-currency-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-currency/page/sw-settings-currency-list/sw-settings-currency-list.html.twig
@@ -39,6 +39,10 @@
                 </template>
             {% endblock %}
 
+            {% block sw_settings_currency_list_language_switch %}
+                <sw-language-switch slot="language-switch" @on-change="onChangeLanguage"></sw-language-switch>
+            {% endblock %}
+
             {% block sw_settings_currency_list_content %}
                 <sw-card-view slot="content">
                     {% block sw_settings_currency_list_content_card %}
@@ -65,7 +69,7 @@
                                                         <router-link class="sw-currency-list__column-name" :title="$tc('sw-settings-currency.list.contextMenuEdit')"
                                                                      :to="{ name: 'sw.settings.currency.detail', params: { id: item.id } }">
                                                             {% block sw_settings_currency_list_columns_name_link %}
-                                                                {{ item.name }}
+                                                                {{ item.meta.viewData.name }}
                                                             {% endblock %}
                                                         </router-link>
                                                     {% endblock %}
@@ -81,7 +85,7 @@
                                                                 editable
                                                                 :label="$tc('sw-settings-currency.list.columnShortName')">
                                                     {% block sw_settings_currency_list_columns_short_name_label %}
-                                                        {{ item.shortName }}
+                                                        {{ item.meta.viewData.shortName }}
                                                     {% endblock %}
 
                                                     {% block sw_settings_currency_list_grid_columns_shortname_editor %}
@@ -146,7 +150,7 @@
                                                           variant="small">
                                                     {% block sw_settings_currency_list_delete_modal_confirm_text %}
                                                         <p>
-                                                            {{ $tc('sw-settings-currency.list.textDeleteConfirm', 0, { name: item.name }) }}
+                                                            {{ $tc('sw-settings-currency.list.textDeleteConfirm', 0, { name: item.meta.viewData.name }) }}
                                                         </p>
                                                     {% endblock %}
 
